# mneme

./: .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml
crates/mneme-core/: Cargo.toml
crates/mneme-core/src/: entity.rs  event.rs  lib.rs  synthesizer.rs  traits.rs  types.rs
crates/mneme-evolve/: Cargo.toml
crates/mneme-evolve/src/: lib.rs  parse.rs  prompts.rs  worker.rs  worker_tests.rs
crates/mneme-index/: Cargo.toml
crates/mneme-index/src/: bm25.rs  lib.rs  vector.rs
crates/mneme-index/src/chunker/: mod.rs  paragraph.rs
crates/mneme-index/src/embedder/: fastembed.rs  mod.rs
crates/mneme-index/src/synthesizer/: mod.rs  snippet.rs
crates/mneme-llm/: Cargo.toml
crates/mneme-llm/src/: fake.rs  lib.rs  ollama.rs
crates/mneme-procedural/: Cargo.toml
crates/mneme-procedural/src/: curve.rs  eval.rs  executor.rs  gate.rs  judge.rs  lib.rs  parse.rs  prompts.rs  proposal.rs  reflect.rs  shadow.rs  store.rs  worker.rs
crates/mneme-procedural/tests/: compile_e2e.rs
crates/mneme-server/: Cargo.toml
crates/mneme-server/src/: dashboard.html  demo.rs  demo_llm.rs  demo_procedural.rs  embedding_worker.rs  index.html  main.rs  metrics.rs  viz.rs
crates/mneme-store/: Cargo.toml
crates/mneme-store/src/: lib.rs
