[package]
name = "mneme-core"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
description = "Core types and traits for the mneme self-improving agent memory layer."

[dependencies]
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
anyhow.workspace = true
ulid.workspace = true
time.workspace = true
async-trait.workspace = true
