[package]
name = "mneme-index"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[features]
# `fastembed` brings in ort + ONNX runtime + ~30MB of model download on first
# use. Default-on for production builds; CI / tests can opt out via
# `cargo test --no-default-features` to keep cold builds fast.
default = ["fastembed"]
fastembed = ["dep:fastembed"]

[dependencies]
mneme-core.workspace = true
tokio.workspace = true
serde.workspace = true
async-trait.workspace = true
tracing.workspace = true
anyhow.workspace = true
hnsw_rs.workspace = true
tantivy.workspace = true
simsimd.workspace = true
ulid.workspace = true
fastembed = { workspace = true, optional = true }
