[package]
name = "mneme-llm"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
description = "LlmClient implementations for mneme: Fake (deterministic, dep-free) + Ollama (local HTTP backend)."

[features]
# `ollama` pulls in reqwest + serde_json so callers that don't need the
# real backend (CI tests, embeddings-only builds) stay light. Default-on
# so `cargo build` from the workspace root gets the full client.
default = ["ollama"]
ollama = ["dep:reqwest", "dep:serde_json"]

[dependencies]
mneme-core.workspace = true
async-trait.workspace = true
tracing.workspace = true
anyhow.workspace = true
serde = { workspace = true, features = ["derive"] }
tokio.workspace = true
reqwest = { workspace = true, optional = true }
serde_json = { workspace = true, optional = true }
