[package]
name = "mneme-server"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[[bin]]
name = "mneme"
path = "src/main.rs"

[features]
default = ["ollama"]
# When enabled, the server can host the real `OllamaLlmClient` for the
# evolution worker. Toggle off (via `--no-default-features`) for CI /
# slim builds that don't need the HTTP dependency tree — the worker
# transparently falls back to `DemoLlmClient`.
ollama = ["mneme-llm/ollama"]

[dependencies]
mneme-core.workspace = true
mneme-store.workspace = true
mneme-index.workspace = true
mneme-evolve.workspace = true
mneme-llm = { workspace = true, default-features = false }
mneme-procedural.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
anyhow.workspace = true
axum.workspace = true
tower-http.workspace = true
serde.workspace = true
serde_json.workspace = true
async-trait.workspace = true
